Add update form to notebook page.
